src/test/resources/Parser/SyntaxErrors/MissingReturn.front
class MissingReturn:

static doNothing  (t: (int32->())) {}

static haveFun1 <R> (i: int32) -> R? {return null;} //should not err
static haveFun2 <R> (i: int32) -> R {} //should err because of missing return

export static main () {
    doNothing(haveFun1*);
    doNothing(haveFun2*);
}